# Legal-Document-Analysis-Chatbot

./: README.md  main.py  main_t5_large.py  pyproject.toml  requirements.txt
