[project]
name = "internship-5th-sem-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chroma[gpu]>=0.2.0",
    "chromadb[gpu]>=1.0.13",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.1",
    "pypdf>=5.6.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "streamlit>=1.46.0",
    "transformers>=4.52.4",
]
